--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@
   --color-primary: blue;
   --color-secondary: teal;
 }
+@plugin "daisyui/theme" {
+  name: "dark";
+  --color-primary: blue;
+  --color-secondary: teal;
+}
